--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = tbb
-url = file:///aot/build/clearlinux/packages/tbb/tbb-v21.05.26.tar.gz
+url = file:///aot/build/clearlinux/packages/tbb/tbb-v2021.5.0.tar.gz
 archives = 
 giturl = https://github.com/01org/tbb.git
 domain = 
@@ -28,6 +28,8 @@ altflags_pgo = true
 altflags_pgo_32 = false
 # unset %build ld_as_needed variable
 asneeded = true
+# enable a simpler autogen macro
+autogen_simple = false
 # this package is trusted enough to automatically update (used by other tools)
 autoupdate = false
 # extend flags with '-std=gnu++98
@@ -35,15 +37,19 @@ broken_c++ = false
 # disable parallelization during build
 broken_parallel_build = false
 # configure build with special options
-build_special = false
+build_special = true
 # configure build with special options 2
 build_special2 = false
+# configure 32bits build with special options
+build_special_32 = false
 # show ccache stats after compile
 ccstats = false
 # this package is a library compatibility package and only ships versioned library files
 compat = false
 # set conservative build flags
 conservative_flags = false
+# enable source custom .bashrc
+custom_bashrc = false
 # dev package requires the extras to be installed
 dev_requires_extras = false
 # disable maintainer mode for autotools
@@ -82,6 +88,8 @@ openmpi = false
 optimize_size = false
 # set profile for pgo
 pgo = false
+# enable ruby build from gemspec
+ruby_pattern_from_gemspec = false
 # set flags for security-sensitive builds
 security_sensitive = true
 # do not run test suite
